Translations by HarDao to translation/pl/hardao/sutta/sn/sn22/sn22.1_translation-pl-hardao.json

--- a/translation/pl/hardao/sutta/sn/sn22/sn22.1_translation-pl-hardao.json
+++ b/translation/pl/hardao/sutta/sn/sn22/sn22.1_translation-pl-hardao.json
@@ -48,7 +48,7 @@
   "sn22.1:15.3": "Gdy nie ma obsesji: „Jestem odczuciem, odczucie jest moje”, jego odczucie wypacza się i staje się inne. ",
   "sn22.1:15.4": "Gdy odczucie wypacza się i staje się inne, nie powstają w nim żal, lament, krzywda, smutek i rozpacz. ",
   "sn22.1:16.1": "Nie uznaje rozpoznawania za istotę ani istoty posiadającą rozpoznawanie, ani rozpoznawania w istocie, ani istoty w rozpoznawaniu. ",
-  "sn22.1:16.2": "Nie ma obsesji: „Jestem rozpoznawaniem, rozpoznawanie jest moje”. ",
+  "sn22.1:16.2": "Nie pozostaje w obsesji: »Jestem rozpoznawaniem, rozpoznawanie jest moje«. ",
   "sn22.1:16.3": "Gdy nie ma obsesji: „Jestem rozpoznawaniem, rozpoznawanie jest moje”, jego rozpoznawanie wypacza się i staje się inne. ",
   "sn22.1:16.4": "Gdy rozpoznawanie wypacza się i staje się inne, nie powstają w nim żal, lament, krzywda, smutek i rozpacz. ",
   "sn22.1:17.1": "Nie uznaje wytworzenia umysłowego za istotę ani istoty posiadającej wytworzenie umysłowe, ani wytworzenia umysłowego w istocie, ani istoty w wytworzeniu umysłowym. ",
