--- a/translation/pl/hardao/sutta/sn/sn22/sn22.1_translation-pl-hardao.json
+++ b/translation/pl/hardao/sutta/sn/sn22/sn22.1_translation-pl-hardao.json
@@ -45,7 +45,7 @@
   "sn22.1:14.6": "Gdy forma materialna wypacza się i staje się inna, nie powstają w nim żal, lament, krzywda, smutek i rozpacz. ",
   "sn22.1:15.1": "Nie uznaje odczucia za istotę ani istoty posiadającej odczucie, ani odczucia w istocie, ani istoty w odczuciu. ",
   "sn22.1:15.2": "Nie pozostaje w obsesji: »Jestem odczuciem, odczucie jest moje«. ",
-  "sn22.1:15.3": "Gdy nie ma obsesji: „Jestem odczuciem, odczucie jest moje”, jego odczucie wypacza się i staje się inne. ",
+  "sn22.1:15.3": "Gdy nie pozostaje w obsesji: »Jestem odczuciem, odczucie jest moje«, jego odczucie wypacza się i staje się inne. ",
   "sn22.1:15.4": "Gdy odczucie wypacza się i staje się inne, nie powstają w nim żal, lament, krzywda, smutek i rozpacz. ",
   "sn22.1:16.1": "Nie uznaje rozpoznawania za istotę ani istoty posiadającą rozpoznawanie, ani rozpoznawania w istocie, ani istoty w rozpoznawaniu. ",
   "sn22.1:16.2": "Nie pozostaje w obsesji: »Jestem rozpoznawaniem, rozpoznawanie jest moje«. ",
