Translations by HarDao to translation/pl/hardao/sutta/sn/sn22/sn22.1_translation-pl-hardao.json

--- a/translation/pl/hardao/sutta/sn/sn22/sn22.1_translation-pl-hardao.json
+++ b/translation/pl/hardao/sutta/sn/sn22/sn22.1_translation-pl-hardao.json
@@ -53,7 +53,7 @@
   "sn22.1:16.4": "Gdy rozpoznawanie wypacza się i staje się inne, nie powstają w nim żal, lament, krzywda, smutek i rozpacz. ",
   "sn22.1:17.1": "Nie uznaje wytworzenia umysłowego za istotę ani istoty posiadającej wytworzenie umysłowe, ani wytworzenia umysłowego w istocie, ani istoty w wytworzeniu umysłowym. ",
   "sn22.1:17.2": "Nie pozostaje w obsesji: »Jestem wytworzeniem umysłowym, wytworzenie umysłowe jest moje«. ",
-  "sn22.1:17.3": "Gdy nie ma obsesji: „Jestem wytworzeniem umysłowym, wytworzenie umysłowe jest moje”, jego wytworzenie umysłowe wypacza się i staje się inne. ",
+  "sn22.1:17.3": "Gdy nie pozostaje w obsesji: »Jestem wytworzeniem umysłowym, wytworzenie umysłowe jest moje«, jego wytworzenie umysłowe wypacza się i staje się inne. ",
   "sn22.1:17.4": "Gdy wytworzenie umysłowe wypacza się i staje się inne, nie powstają w nim żal, lament, krzywda, smutek i rozpacz. ",
   "sn22.1:18.1": "Nie uznaje świadomości za istotę ani istoty posiadającej świadomość, ani świadomości w istocie, ani istoty w świadomości. ",
   "sn22.1:18.2": "Nie pozostaje w obsesji: »Jestem świadomością, świadomość jest moja«. ",
