Translations by HarDao to translation/pl/hardao/sutta/sn/sn22/sn22.1_translation-pl-hardao.json

--- a/translation/pl/hardao/sutta/sn/sn22/sn22.1_translation-pl-hardao.json
+++ b/translation/pl/hardao/sutta/sn/sn22/sn22.1_translation-pl-hardao.json
@@ -57,7 +57,7 @@
   "sn22.1:17.4": "Gdy wytworzenie umysłowe wypacza się i staje się inne, nie powstają w nim żal, lament, krzywda, smutek i rozpacz. ",
   "sn22.1:18.1": "Nie uznaje świadomości za istotę ani istoty posiadającej świadomość, ani świadomości w istocie, ani istoty w świadomości. ",
   "sn22.1:18.2": "Nie pozostaje w obsesji: »Jestem świadomością, świadomość jest moja«. ",
-  "sn22.1:18.3": "Gdy nie ma obsesji: „Jestem świadomością, świadomość jest moja”, jego świadomość wypacza się i staje się inne. ",
+  "sn22.1:18.3": "Gdy nie pozostaje w obsesji: »Jestem świadomością, świadomość jest moja«, jego świadomość wypacza się i staje się inne. ",
   "sn22.1:18.4": "Gdy świadomość wypacza się i staje się inna, nie powstają w nim żal, lament, krzywda, smutek i rozpacz. ",
   "sn22.1:18.5": "W taki sposób, gospodarzu, doskwiera ciało, ale nie doskwiera umysł”. ",
   "sn22.1:19.1": "To właśnie powiedział Czcigodny Sāriputta. ",
