--- a/translation/pl/hardao/sutta/sn/sn22/sn22.1_translation-pl-hardao.json
+++ b/translation/pl/hardao/sutta/sn/sn22/sn22.1_translation-pl-hardao.json
@@ -1,4 +1,5 @@
 {
+  "sn22.1:0.1": "Zbiór połączonych mów - 22 ",
   "sn22.1:0.2": "Rozdział o ojcu Nakuli ",
   "sn22.1:0.3": "1. Mowa do ojca Nakuli ",
   "sn22.1:1.1": "Oto com usłyszał – ",
