--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -122,7 +122,7 @@
   "mn122:20.4": "Aber ein Schüler soll es für wert halten, sich um Gesprächen über Selbstüberwindung willen, die helfen, das Herz zu öffnen, und die einzig zu Ernüchterung, Schwinden der Leidenschaft, Aufhören, Frieden, Einsicht, Erwachen und Erlöschen führen, dem Lehrer anzuschließen, selbst wenn der ihn wegschickt: nämlich um Gesprächen über Genügsamkeit willen, Gesprächen über Zufriedenheit, Abgeschiedenheit, Sichfernhalten, das Aufrütteln der Energie, sittliches Verhalten, Versenkung, Weisheit, Freiheit und das Erkennen und Sehen der Freiheit. ",
   "mn122:21.1": "Da das so ist, Ānanda, gibt es eine Gefahr für den Lehrer, eine Gefahr für den Schüler und eine Gefahr für den, der das geistliche Leben führt. ",
   "mn122:22.1": "Und wie gibt es eine Gefahr für den Lehrer? ",
-  "mn122:22.2": "Da sucht ein Lehrer einen abgelegenen Platz auf: eine Wildnis, den Fuß eines Baumes, einen Hügel, eine Schlucht, eine Berghöhle, ein Leichenfeld, einen Wald, das Freie, einen Strohhaufen. ",
+  "mn122:22.2": "Da sucht ein Lehrer einen abgelegenen Platz auf: eine Wildnis, den Fuß eines Baumes, einen Hügel, eine Schlucht, eine Berghöhle, ein Leichenfeld, einen Wald, den freien Himmel, einen Strohhaufen. ",
   "mn122:22.3": "Während er dort zurückgezogen meditiert, wird er von einem Strom von Brahmanen und Hausbesitzern aus Stadt und Land besucht. ",
   "mn122:22.4": "Wenn das geschieht, genießt er Betörung, wird gierig und verfällt wieder in Schwelgen. ",
   "mn122:22.5": "Dieser Lehrer, so heißt es, ist von der Gefahr für den Lehrer gefährdet. ",
