Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
@@ -1,5 +1,6 @@
 {
   "mn131:0.1": "Mittlere Lehrreden 131 ",
   "mn131:0.2": "Eine erlesene Nacht ",
+  "mn131:1.1": "So habe ich es gehört: ",
   "mn131:4.2": "aufbringen "
 }
