--- a/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
@@ -3,5 +3,6 @@
   "mn131:0.2": "Eine erlesene Nacht ",
   "mn131:1.1": "So habe ich es gehört: ",
   "mn131:1.2": "Einmal hielt sich der Buddha bei Sāvatthī in Jetas Wäldchen auf, dem Kloster des Anāthapiṇḍika. ",
+  "mn131:1.3": "Da wandte sich der Buddha an die Mönche und Nonnen: ",
   "mn131:4.2": "aufbringen "
 }
