--- a/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
@@ -5,5 +5,6 @@
   "mn131:1.2": "Einmal hielt sich der Buddha bei Sāvatthī in Jetas Wäldchen auf, dem Kloster des Anāthapiṇḍika. ",
   "mn131:1.3": "Da wandte sich der Buddha an die Mönche und Nonnen: ",
   "mn131:1.4": "„Mönche und Nonnen!“ ",
+  "mn131:1.5": "„Ehrwürdiger Herr“, antworteten sie. ",
   "mn131:4.2": "aufbringen "
 }
