--- a/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
@@ -6,5 +6,6 @@
   "mn131:1.3": "Da wandte sich der Buddha an die Mönche und Nonnen: ",
   "mn131:1.4": "„Mönche und Nonnen!“ ",
   "mn131:1.5": "„Ehrwürdiger Herr“, antworteten sie. ",
+  "mn131:1.6": "Der Buddha sagte: ",
   "mn131:4.2": "aufbringen "
 }
