Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
@@ -7,5 +7,6 @@
   "mn131:1.4": "„Mönche und Nonnen!“ ",
   "mn131:1.5": "„Ehrwürdiger Herr“, antworteten sie. ",
   "mn131:1.6": "Der Buddha sagte: ",
+  "mn131:2.1": "„Ich will euch den Merksatz zum Aufsagen und die Aufgliederung über eine erlesene Nacht lehren. ",
   "mn131:4.2": "aufbringen "
 }
