Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
@@ -9,5 +9,6 @@
   "mn131:1.6": "Der Buddha sagte: ",
   "mn131:2.1": "„Ich will euch den Merksatz zum Aufsagen und die Aufgliederung über eine erlesene Nacht lehren. ",
   "mn131:2.2": "Hört zu und gebraucht den Geist gut, ich werde sprechen.“ ",
+  "mn131:2.3": "„Ja, Herr“, antworteten sie. ",
   "mn131:4.2": "aufbringen "
 }
