--- a/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
@@ -11,5 +11,6 @@
   "mn131:2.2": "Hört zu und gebraucht den Geist gut, ich werde sprechen.“ ",
   "mn131:2.3": "„Ja, Herr“, antworteten sie. ",
   "mn131:2.4": "Der Buddha sagte: ",
+  "mn131:3.1": "„Wendet euch nicht zu Vergangenem zurück, ",
   "mn131:4.2": "aufbringen "
 }
