--- a/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
@@ -12,5 +12,6 @@
   "mn131:2.3": "„Ja, Herr“, antworteten sie. ",
   "mn131:2.4": "Der Buddha sagte: ",
   "mn131:3.1": "„Wendet euch nicht zu Vergangenem zurück, ",
+  "mn131:3.2": "hofft nicht auf das Künftige. ",
   "mn131:4.2": "aufbringen "
 }
