--- a/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
@@ -13,5 +13,6 @@
   "mn131:2.4": "Der Buddha sagte: ",
   "mn131:3.1": "„Wendet euch nicht zu Vergangenem zurück, ",
   "mn131:3.2": "hofft nicht auf das Künftige. ",
+  "mn131:3.3": "Was vergangen ist, wurde aufgegeben; ",
   "mn131:4.2": "aufbringen "
 }
