--- a/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
@@ -14,5 +14,6 @@
   "mn131:3.1": "„Wendet euch nicht zu Vergangenem zurück, ",
   "mn131:3.2": "hofft nicht auf das Künftige. ",
   "mn131:3.3": "Was vergangen ist, wurde aufgegeben, ",
+  "mn131:3.4": "die Zukunft ist noch nicht angekommen ",
   "mn131:4.2": "aufbringen "
 }
