--- a/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
@@ -17,5 +17,6 @@
   "mn131:3.4": "die Zukunft ist noch nicht angekommen, ",
   "mn131:3.5": "und gegenwärtige Erscheinungen ",
   "mn131:3.6": "sieht man klar in jedem Fall. ",
+  "mn131:3.7": "Wenn ihr das erkennt, pflegt es, ",
   "mn131:4.2": "aufbringen "
 }
