Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
@@ -18,5 +18,6 @@
   "mn131:3.5": "und gegenwärtige Erscheinungen ",
   "mn131:3.6": "sieht man klar in jedem Fall. ",
   "mn131:3.7": "Wenn ihr das erkennt, pflegt es, ",
+  "mn131:3.8": "ohne zu wanken, unerschütterlich. ",
   "mn131:4.2": "aufbringen "
 }
