--- a/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
@@ -19,5 +19,6 @@
   "mn131:3.6": "sieht man klar in jedem Fall. ",
   "mn131:3.7": "Wenn ihr das erkennt, pflegt es, ",
   "mn131:3.8": "ohne zu wanken, unerschütterlich. ",
+  "mn131:3.9": "Heute ist der Tag für eifrige Arbeit – ",
   "mn131:4.2": "aufbringen "
 }
