Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
@@ -20,5 +20,6 @@
   "mn131:3.7": "Wenn ihr das erkennt, pflegt es, ",
   "mn131:3.8": "ohne zu wanken, unerschütterlich. ",
   "mn131:3.9": "Heute ist der Tag für eifrige Arbeit – ",
+  "mn131:3.10": "wer weiß, morgen könnte den Tod bringen! ",
   "mn131:4.2": "aufbringen "
 }
