--- a/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
@@ -22,5 +22,6 @@
   "mn131:3.9": "Heute ist der Tag für eifrige Arbeit – ",
   "mn131:3.10": "wer weiß, morgen könnte den Tod bringen! ",
   "mn131:3.11": "Denn es gibt kein Feilschen ",
+  "mn131:3.12": "mit dem Tod und seinem mächtigen Heer. ",
   "mn131:4.2": "aufbringen "
 }
