Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
@@ -23,5 +23,6 @@
   "mn131:3.10": "wer weiß, morgen könnte den Tod bringen! ",
   "mn131:3.11": "Denn es gibt kein Feilschen ",
   "mn131:3.12": "mit dem Tod und seinem mächtigen Heer. ",
+  "mn131:3.13": "Der friedvolle Abgeklärte erklärt, es sind die, ",
   "mn131:4.2": "aufbringen "
 }
