--- a/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
@@ -26,5 +26,6 @@
   "mn131:3.13": "Der friedvolle Abgeklärte erklärt, es sind die, ",
   "mn131:3.14": "die unermüdlich bei Tag und Nacht ",
   "mn131:3.15": "voll Eifer so meditieren, ",
+  "mn131:3.16": "die wahrhaftig diese eine erlesene Nacht haben. ",
   "mn131:4.2": "aufbringen "
 }
