Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
@@ -27,5 +27,6 @@
   "mn131:3.14": "die unermüdlich bei Tag und Nacht ",
   "mn131:3.15": "voll Eifer so meditieren, ",
   "mn131:3.16": "die wahrhaftig diese eine erlesene Nacht haben. ",
+  "mn131:4.1": "Und wie, Mönche und Nonnen, wendet man sich zu Vergangenem zurück? ",
   "mn131:4.2": "aufbringen "
 }
