--- a/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
@@ -29,5 +29,6 @@
   "mn131:3.16": "die wahrhaftig diese eine erlesene Nacht haben. ",
   "mn131:4.1": "Und wie, Mönche und Nonnen, wendet man sich zu Vergangenem zurück? ",
   "mn131:4.2": "‚Ich hatte solche Form in der Vergangenheit‘ … ‚Ich hatte solches Gefühl … solche Wahrnehmung … solche Entscheidungen … solches Bewusstsein in der Vergangenheit‘, so bringt man da Entzücken auf. ",
-  "mn131:4.3": "So wendet man sich zu Vergangenem zurück. "
+  "mn131:4.3": "So wendet man sich zu Vergangenem zurück. ",
+  "mn131:5.1": "Und wie wendet man sich nicht zu Vergangenem zurück? "
 }
