--- a/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
@@ -31,5 +31,6 @@
   "mn131:4.2": "‚Ich hatte solche Form in der Vergangenheit‘ … ‚Ich hatte solches Gefühl … solche Wahrnehmung … solche Entscheidungen … solches Bewusstsein in der Vergangenheit‘, so bringt man da Entzücken auf. ",
   "mn131:4.3": "So wendet man sich zu Vergangenem zurück. ",
   "mn131:5.1": "Und wie wendet man sich nicht zu Vergangenem zurück? ",
-  "mn131:5.2": "‚Ich hatte solche Form in der Vergangenheit‘ … ‚Ich hatte solches Gefühl … solche Wahrnehmung … solche Entscheidungen … solches Bewusstsein in der Vergangenheit‘, so bringt man da kein Entzücken auf. "
+  "mn131:5.2": "‚Ich hatte solche Form in der Vergangenheit‘ … ‚Ich hatte solches Gefühl … solche Wahrnehmung … solche Entscheidungen … solches Bewusstsein in der Vergangenheit‘, so bringt man da kein Entzücken auf. ",
+  "mn131:5.3": "So wendet man sich nicht zu Vergangenem zurück. "
 }
