--- a/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
@@ -32,5 +32,6 @@
   "mn131:4.3": "So wendet man sich zu Vergangenem zurück. ",
   "mn131:5.1": "Und wie wendet man sich nicht zu Vergangenem zurück? ",
   "mn131:5.2": "‚Ich hatte solche Form in der Vergangenheit‘ … ‚Ich hatte solches Gefühl … solche Wahrnehmung … solche Entscheidungen … solches Bewusstsein in der Vergangenheit‘, so bringt man da kein Entzücken auf. ",
-  "mn131:5.3": "So wendet man sich nicht zu Vergangenem zurück. "
+  "mn131:5.3": "So wendet man sich nicht zu Vergangenem zurück. ",
+  "mn131:6.1": "Und wie hofft man auf das Künftige? "
 }
