--- a/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
@@ -34,5 +34,6 @@
   "mn131:5.2": "‚Ich hatte solche Form in der Vergangenheit‘ … ‚Ich hatte solches Gefühl … solche Wahrnehmung … solche Entscheidungen … solches Bewusstsein in der Vergangenheit‘, so bringt man da kein Entzücken auf. ",
   "mn131:5.3": "So wendet man sich nicht zu Vergangenem zurück. ",
   "mn131:6.1": "Und wie hofft man auf das Künftige? ",
-  "mn131:6.2": "‚Dass ich doch solche Form in der Zukunft hätte‘ … ‚Dass ich doch solches Gefühl … solche Wahrnehmung … solche Entscheidungen … solches Bewusstsein in der Zukunft hätte‘, so bringt man da Entzücken auf. "
+  "mn131:6.2": "‚Dass ich doch solche Form in der Zukunft hätte‘ … ‚Dass ich doch solches Gefühl … solche Wahrnehmung … solche Entscheidungen … solches Bewusstsein in der Zukunft hätte‘, so bringt man da Entzücken auf. ",
+  "mn131:6.3": "So hofft man auf das Künftige. "
 }
