--- a/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
@@ -35,5 +35,6 @@
   "mn131:5.3": "So wendet man sich nicht zu Vergangenem zurück. ",
   "mn131:6.1": "Und wie hofft man auf das Künftige? ",
   "mn131:6.2": "‚Dass ich doch solche Form in der Zukunft hätte‘ … ‚Dass ich doch solches Gefühl … solche Wahrnehmung … solche Entscheidungen … solches Bewusstsein in der Zukunft hätte‘, so bringt man da Entzücken auf. ",
-  "mn131:6.3": "So hofft man auf das Künftige. "
+  "mn131:6.3": "So hofft man auf das Künftige. ",
+  "mn131:7.1": "Und wie hofft man nicht auf das Künftige? "
 }
