Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
@@ -37,5 +37,6 @@
   "mn131:6.2": "‚Dass ich doch solche Form in der Zukunft hätte‘ … ‚Dass ich doch solches Gefühl … solche Wahrnehmung … solche Entscheidungen … solches Bewusstsein in der Zukunft hätte‘, so bringt man da Entzücken auf. ",
   "mn131:6.3": "So hofft man auf das Künftige. ",
   "mn131:7.1": "Und wie hofft man nicht auf das Künftige? ",
-  "mn131:7.2": "‚Dass ich doch solche Form in der Zukunft hätte‘ … ‚Dass ich doch solches Gefühl … solche Wahrnehmung … solche Entscheidungen … solches Bewusstsein in der Zukunft hätte‘, so bringt man da kein Entzücken auf. "
+  "mn131:7.2": "‚Dass ich doch solche Form in der Zukunft hätte‘ … ‚Dass ich doch solches Gefühl … solche Wahrnehmung … solche Entscheidungen … solches Bewusstsein in der Zukunft hätte‘, so bringt man da kein Entzücken auf. ",
+  "mn131:7.3": "So hofft man nicht auf das Künftige. "
 }
