--- a/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
@@ -44,5 +44,6 @@
   "mn131:8.3": "Er betrachtet Form als das Selbst, das Selbst als etwas, das Form hat, Form als im Selbst oder das Selbst als in der Form. ",
   "mn131:8.4": "Er betrachtet Gefühl … ",
   "mn131:8.5": "Wahrnehmung … ",
-  "mn131:8.6": "Entscheidungen … "
+  "mn131:8.6": "Entscheidungen … ",
+  "mn131:8.7": "oder Bewusstsein als das Selbst, das Selbst als etwas, das Bewusstsein hat, Bewusstsein als im Selbst oder das Selbst als im Bewusstsein. "
 }
