--- a/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
@@ -45,5 +45,6 @@
   "mn131:8.4": "Er betrachtet Gefühl … ",
   "mn131:8.5": "Wahrnehmung … ",
   "mn131:8.6": "Entscheidungen … ",
-  "mn131:8.7": "oder Bewusstsein als das Selbst, das Selbst als etwas, das Bewusstsein hat, Bewusstsein als im Selbst oder das Selbst als im Bewusstsein. "
+  "mn131:8.7": "oder Bewusstsein als das Selbst, das Selbst als etwas, das Bewusstsein hat, Bewusstsein als im Selbst oder das Selbst als im Bewusstsein. ",
+  "mn131:8.8": "So wankt man inmitten gegenwärtiger Erscheinungen. "
 }
