--- a/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
@@ -46,5 +46,6 @@
   "mn131:8.5": "Wahrnehmung … ",
   "mn131:8.6": "Entscheidungen … ",
   "mn131:8.7": "oder Bewusstsein als das Selbst, das Selbst als etwas, das Bewusstsein hat, Bewusstsein als im Selbst oder das Selbst als im Bewusstsein. ",
-  "mn131:8.8": "So wankt man inmitten gegenwärtiger Erscheinungen. "
+  "mn131:8.8": "So wankt man inmitten gegenwärtiger Erscheinungen. ",
+  "mn131:9.1": "Und wie wankt man nicht inmitten gegenwärtiger Erscheinungen? "
 }
