--- a/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
@@ -50,5 +50,6 @@
   "mn131:9.1": "Und wie wankt man nicht inmitten gegenwärtiger Erscheinungen? ",
   "mn131:9.2": "Da hat ein gebildeter edler Schüler die Edlen gesehen und ist in der Lehre der Edlen bewandert und geschult. Er hat wahre Menschen gesehen und ist in der Lehre der wahren Menschen bewandert und geschult. ",
   "mn131:9.3": "Er betrachtet nicht Form als das Selbst, das Selbst als etwas, das Form hat, Form als im Selbst oder das Selbst als in der Form. ",
-  "mn131:9.4": "Er betrachtet nicht Gefühl … "
+  "mn131:9.4": "Er betrachtet nicht Gefühl … ",
+  "mn131:9.5": "Wahrnehmung … "
 }
