--- a/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
@@ -53,5 +53,6 @@
   "mn131:9.4": "Er betrachtet nicht Gefühl … ",
   "mn131:9.5": "Wahrnehmung … ",
   "mn131:9.6": "Entscheidungen … ",
-  "mn131:9.7": "oder Bewusstsein als das Selbst, das Selbst als etwas, das Bewusstsein hat, Bewusstsein als im Selbst oder das Selbst als im Bewusstsein. "
+  "mn131:9.7": "oder Bewusstsein als das Selbst, das Selbst als etwas, das Bewusstsein hat, Bewusstsein als im Selbst oder das Selbst als im Bewusstsein. ",
+  "mn131:9.8": "So wankt man nicht inmitten gegenwärtiger Erscheinungen. "
 }
