Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
@@ -55,5 +55,6 @@
   "mn131:9.6": "Entscheidungen … ",
   "mn131:9.7": "oder Bewusstsein als das Selbst, das Selbst als etwas, das Bewusstsein hat, Bewusstsein als im Selbst oder das Selbst als im Bewusstsein. ",
   "mn131:9.8": "So wankt man nicht inmitten gegenwärtiger Erscheinungen. ",
-  "mn131:10.1": "Wendet euch nicht zu Vergangenem zurück, "
+  "mn131:10.1": "Wendet euch nicht zu Vergangenem zurück, ",
+  "mn131:10.2": "hofft nicht auf das Künftige. "
 }
