--- a/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
@@ -56,5 +56,6 @@
   "mn131:9.7": "oder Bewusstsein als das Selbst, das Selbst als etwas, das Bewusstsein hat, Bewusstsein als im Selbst oder das Selbst als im Bewusstsein. ",
   "mn131:9.8": "So wankt man nicht inmitten gegenwärtiger Erscheinungen. ",
   "mn131:10.1": "Wendet euch nicht zu Vergangenem zurück, ",
-  "mn131:10.2": "hofft nicht auf das Künftige. "
+  "mn131:10.2": "hofft nicht auf das Künftige. ",
+  "mn131:10.3": "Was vergangen ist, wurde aufgegeben, "
 }
