--- a/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
@@ -58,5 +58,6 @@
   "mn131:10.1": "Wendet euch nicht zu Vergangenem zurück, ",
   "mn131:10.2": "hofft nicht auf das Künftige. ",
   "mn131:10.3": "Was vergangen ist, wurde aufgegeben, ",
-  "mn131:10.4": "die Zukunft ist noch nicht angekommen, "
+  "mn131:10.4": "die Zukunft ist noch nicht angekommen, ",
+  "mn131:10.5": "und gegenwärtige Erscheinungen "
 }
