Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
@@ -59,5 +59,6 @@
   "mn131:10.2": "hofft nicht auf das Künftige. ",
   "mn131:10.3": "Was vergangen ist, wurde aufgegeben, ",
   "mn131:10.4": "die Zukunft ist noch nicht angekommen, ",
-  "mn131:10.5": "und gegenwärtige Erscheinungen "
+  "mn131:10.5": "und gegenwärtige Erscheinungen ",
+  "mn131:10.6": "sieht man klar in jedem Fall. "
 }
