Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
@@ -61,5 +61,5 @@
   "mn131:10.4": "die Zukunft ist noch nicht angekommen, ",
   "mn131:10.5": "und gegenwärtige Erscheinungen ",
   "mn131:10.6": "sieht man klar in jedem Fall. ",
-  "mn131:10.7": "Ohne zu wanken, unerschütterlich, "
+  "mn131:10.7": "Wenn ihr das erkennt, pflegt es, "
 }
