--- a/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
@@ -62,5 +62,6 @@
   "mn131:10.5": "und gegenwärtige Erscheinungen ",
   "mn131:10.6": "sieht man klar in jedem Fall. ",
   "mn131:10.7": "Wenn ihr das erkennt, pflegt es, ",
-  "mn131:10.8": "ohne zu wanken, unerschütterlich. "
+  "mn131:10.8": "ohne zu wanken, unerschütterlich. ",
+  "mn131:10.9": "Heute ist der Tag für eifrige Arbeit – "
 }
