Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
@@ -64,5 +64,6 @@
   "mn131:10.7": "Wenn ihr das erkennt, pflegt es, ",
   "mn131:10.8": "ohne zu wanken, unerschütterlich. ",
   "mn131:10.9": "Heute ist der Tag für eifrige Arbeit – ",
-  "mn131:10.10": "wer weiß, morgen könnte den Tod bringen! "
+  "mn131:10.10": "wer weiß, morgen könnte den Tod bringen! ",
+  "mn131:10.11": "Denn es gibt kein Feilschen "
 }
