Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
@@ -66,5 +66,6 @@
   "mn131:10.9": "Heute ist der Tag für eifrige Arbeit – ",
   "mn131:10.10": "wer weiß, morgen könnte den Tod bringen! ",
   "mn131:10.11": "Denn es gibt kein Feilschen ",
-  "mn131:10.12": "mit dem Tod und seinem mächtigen Heer. "
+  "mn131:10.12": "mit dem Tod und seinem mächtigen Heer. ",
+  "mn131:10.13": "Der friedvolle Abgeklärte erklärt, es sind die, "
 }
