--- a/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
@@ -68,5 +68,6 @@
   "mn131:10.11": "Denn es gibt kein Feilschen ",
   "mn131:10.12": "mit dem Tod und seinem mächtigen Heer. ",
   "mn131:10.13": "Der friedvolle Abgeklärte erklärt, es sind die, ",
-  "mn131:10.14": "die unermüdlich bei Tag und Nacht "
+  "mn131:10.14": "die unermüdlich bei Tag und Nacht ",
+  "mn131:10.15": "voll Eifer so meditieren, "
 }
