--- a/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
@@ -72,5 +72,6 @@
   "mn131:10.15": "voll Eifer so meditieren, ",
   "mn131:10.16": "die wahrhaftig diese eine erlesene Nacht haben. ",
   "mn131:11.1": "Das meinte ich, als ich sagte: ‚Ich will euch den Merksatz zum Aufsagen und die Aufgliederung über eine erlesene Nacht lehren.‘“ ",
-  "mn131:11.3": "Das sagte der Buddha. "
+  "mn131:11.3": "Das sagte der Buddha. ",
+  "mn131:11.4": "Zufrieden begrüßten die Mönche und Nonnen die Worte des Buddha. "
 }
