Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
@@ -58,7 +58,7 @@
   "mn131:10.1": "Wendet euch nicht zu Vergangenem zurück, ",
   "mn131:10.2": "hofft nicht auf das Künftige. ",
   "mn131:10.3": "Was vergangen ist, wurde aufgegeben, ",
-  "mn131:10.4": "die Zukunft ist noch nicht angekommen, ",
+  "mn131:10.4": "die Zukunft ist noch nicht gekommen, ",
   "mn131:10.5": "und gegenwärtige Erscheinungen ",
   "mn131:10.6": "sieht man klar in jedem Fall. ",
   "mn131:10.7": "Wenn ihr das erkennt, pflegt es, ",
