Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
@@ -17,7 +17,7 @@
   "mn131:3.4": "die Zukunft ist noch nicht gekommen, ",
   "mn131:3.5": "und gegenwärtige Erscheinungen ",
   "mn131:3.6": "sieht man klar in jedem Fall. ",
-  "mn131:3.7": "Wenn ihr das erkennt, pflegt es, ",
+  "mn131:3.7": "Wenn ihr das erkennt, pflegt es – ",
   "mn131:3.8": "ohne zu wanken, unerschütterlich. ",
   "mn131:3.9": "Heute ist der Tag für eifrige Arbeit – ",
   "mn131:3.10": "wer weiß, morgen könnte den Tod bringen! ",
