Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
@@ -20,7 +20,7 @@
   "mn131:3.7": "Wenn ihr das erkennt, pflegt es – ",
   "mn131:3.8": "ohne zu wanken, unerschütterlich. ",
   "mn131:3.9": "Heute ist der Tag, um sich anzustrengen – ",
-  "mn131:3.10": "wer weiß, morgen könnte den Tod bringen! ",
+  "mn131:3.10": "wer weiß, ob morgen der Tod kommt! ",
   "mn131:3.11": "Denn es gibt kein Feilschen ",
   "mn131:3.12": "mit dem Tod und seinem mächtigen Heer. ",
   "mn131:3.13": "Der friedvolle Abgeklärte erklärt, es sind die, ",
