--- a/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
@@ -64,7 +64,7 @@
   "mn131:10.7": "Wenn ihr das erkennt, pflegt es, ",
   "mn131:10.8": "ohne zu wanken, unerschütterlich. ",
   "mn131:10.9": "Heute ist der Tag, um sich anzustrengen – ",
-  "mn131:10.10": "wer weiß, morgen könnte den Tod bringen! ",
+  "mn131:10.10": "wer weiß, ob morgen der Tod kommt! ",
   "mn131:10.11": "Denn es gibt kein Feilschen ",
   "mn131:10.12": "mit dem Tod und seinem mächtigen Heer. ",
   "mn131:10.13": "Der friedvolle Abgeklärte erklärt, es sind die, ",
