Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
@@ -68,7 +68,7 @@
   "mn131:10.11": "Denn es gibt kein Feilschen ",
   "mn131:10.12": "mit dem Tod und seinem mächtigen Heer. ",
   "mn131:10.13": "Der friedvolle Abgeklärte erklärt, es sind die, ",
-  "mn131:10.14": "die so voll Eifer meditieren, ",
+  "mn131:10.14": "Die so voll Eifer meditieren, ",
   "mn131:10.15": "unermüdlich bei Tag und Nacht, ",
   "mn131:10.16": "die wahrhaftig diese eine erlesene Nacht haben. ",
   "mn131:11.1": "Das meinte ich, als ich sagte: ‚Ich will euch den Merksatz zum Aufsagen und die Aufgliederung über eine erlesene Nacht lehren.‘“ ",
