--- a/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
@@ -70,7 +70,7 @@
   "mn131:10.13": "Der friedvolle Abgeklärte erklärt, es sind die, ",
   "mn131:10.14": "Die so voll Eifer meditieren, ",
   "mn131:10.15": "unermüdlich bei Tag und Nacht, ",
-  "mn131:10.16": "die wahrhaftig diese eine erlesene Nacht haben. ",
+  "mn131:10.16": "sie haben wahrhaftig diese eine erlesene Nacht. ",
   "mn131:11.1": "Das meinte ich, als ich sagte: ‚Ich will euch den Merksatz zum Aufsagen und die Aufgliederung über eine erlesene Nacht lehren.‘“ ",
   "mn131:11.3": "Das sagte der Buddha. ",
   "mn131:11.4": "Zufrieden begrüßten die Mönche und Nonnen die Worte des Buddha. "
