--- a/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
@@ -23,7 +23,7 @@
   "mn131:3.10": "wer weiß, ob morgen der Tod kommt! ",
   "mn131:3.11": "Denn es gibt kein Feilschen ",
   "mn131:3.12": "mit dem Tod und seinem mächtigen Heer. ",
-  "mn131:3.13": "Der friedvolle Abgeklärte erklärt, es sind die, ",
+  "mn131:3.13": "Der friedvolle Abgeklärte erklärt: ",
   "mn131:3.14": "die unermüdlich bei Tag und Nacht ",
   "mn131:3.15": "voll Eifer so meditieren, ",
   "mn131:3.16": "die wahrhaftig diese eine erlesene Nacht haben. ",
