--- a/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
@@ -25,7 +25,7 @@
   "mn131:3.12": "mit dem Tod und seinem mächtigen Heer. ",
   "mn131:3.13": "Der friedvolle Abgeklärte erklärt: ",
   "mn131:3.14": "Die so voll Eifer meditieren, ",
-  "mn131:3.15": "voll Eifer so meditieren, ",
+  "mn131:3.15": "unermüdlich bei Tag und Nacht, ",
   "mn131:3.16": "die wahrhaftig diese eine erlesene Nacht haben. ",
   "mn131:4.1": "Und wie, Mönche und Nonnen, wendet man sich zu Vergangenem zurück? ",
   "mn131:4.2": "‚Ich hatte solche Form in der Vergangenheit‘ … ‚Ich hatte solches Gefühl … solche Wahrnehmung … solche Entscheidungen … solches Bewusstsein in der Vergangenheit‘, so bringt man da Entzücken auf. ",
