Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
@@ -24,7 +24,7 @@
   "mn131:3.11": "Denn es gibt kein Feilschen ",
   "mn131:3.12": "mit dem Tod und seinem mächtigen Heer. ",
   "mn131:3.13": "Die so voll Eifer meditieren, ",
-  "mn131:3.14": "Die so voll Eifer meditieren, ",
+  "mn131:3.14": "unermüdlich bei Tag und Nacht, ",
   "mn131:3.15": "unermüdlich bei Tag und Nacht, ",
   "mn131:3.16": "sie haben wahrhaftig diese eine erlesene Nacht. ",
   "mn131:4.1": "Und wie, Mönche und Nonnen, wendet man sich zu Vergangenem zurück? ",
