Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
@@ -26,7 +26,7 @@
   "mn131:3.13": "Die so voll Eifer meditieren, ",
   "mn131:3.14": "unermüdlich bei Tag und Nacht, ",
   "mn131:3.15": "sie haben wahrhaftig diese eine erlesene Nacht – ",
-  "mn131:3.16": "Das erklärt der friedvolle Abgeklärte. ",
+  "mn131:3.16": "das erklärt der friedvolle Abgeklärte. ",
   "mn131:4.1": "Und wie, Mönche und Nonnen, wendet man sich zu Vergangenem zurück? ",
   "mn131:4.2": "‚Ich hatte solche Form in der Vergangenheit‘ … ‚Ich hatte solches Gefühl … solche Wahrnehmung … solche Entscheidungen … solches Bewusstsein in der Vergangenheit‘, so bringt man da Entzücken auf. ",
   "mn131:4.3": "So wendet man sich zu Vergangenem zurück. ",
