Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
@@ -67,7 +67,7 @@
   "mn131:10.10": "wer weiß, ob morgen der Tod kommt! ",
   "mn131:10.11": "Denn es gibt kein Feilschen ",
   "mn131:10.12": "mit dem Tod und seinem mächtigen Heer. ",
-  "mn131:10.13": "Der friedvolle Abgeklärte erklärt: ",
+  "mn131:10.13": "Die so voll Eifer meditieren, ",
   "mn131:10.14": "Die so voll Eifer meditieren, ",
   "mn131:10.15": "unermüdlich bei Tag und Nacht, ",
   "mn131:10.16": "sie haben wahrhaftig diese eine erlesene Nacht. ",
