--- a/translation/en/sujato/sutta/mn/mn82_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn82_translation-en-sujato.json
@@ -2,7 +2,7 @@
   "mn82:0.1": "Middle Discourses 82 ",
   "mn82:0.2": "With Raṭṭhapāla ",
   "mn82:1.1": "So I have heard. ",
-  "mn82:1.2": "At one time the Buddha was wandering in the land of the Kurus together with a large Saṅgha of mendicants when he arrived at a town of the Kurus named Thullakoṭṭhita. ",
+  "mn82:1.2": "At one time the Buddha was wandering in the land of the Kurus together with a large Saṅgha of mendicants when he arrived at a town of the Kurus named Thullakoṭṭhika. ",
   "mn82:2.1": "The brahmins and householders of Thullakoṭṭhita heard: ",
   "mn82:2.2": "“It seems the ascetic Gotama—a Sakyan, gone forth from a Sakyan family—has arrived at Thullakoṭṭhita, together with a large Saṅgha of mendicants. ",
   "mn82:2.3": "He has this good reputation: ",
