Translations by sujato to translation/en/sujato/sutta/mn/mn82_translation-en-sujato.json

--- a/translation/en/sujato/sutta/mn/mn82_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn82_translation-en-sujato.json
@@ -4,7 +4,7 @@
   "mn82:1.1": "So I have heard. ",
   "mn82:1.2": "At one time the Buddha was wandering in the land of the Kurus together with a large Saṅgha of mendicants when he arrived at a town of the Kurus named Thullakoṭṭhika. ",
   "mn82:2.1": "The brahmins and householders of Thullakoṭṭhika heard: ",
-  "mn82:2.2": "“It seems the ascetic Gotama—a Sakyan, gone forth from a Sakyan family—has arrived at Thullakoṭṭhita, together with a large Saṅgha of mendicants. ",
+  "mn82:2.2": "“It seems the ascetic Gotama—a Sakyan, gone forth from a Sakyan family—has arrived at Thullakoṭṭhika, together with a large Saṅgha of mendicants. ",
   "mn82:2.3": "He has this good reputation: ",
   "mn82:2.4": "‘That Blessed One is perfected, a fully awakened Buddha, accomplished in knowledge and conduct, holy, knower of the world, supreme guide for those who wish to train, teacher of gods and humans, awakened, blessed.’ ",
   "mn82:2.5": "He has realized with his own insight this world—with its gods, Māras and Brahmās, this population with its ascetics and brahmins, gods and humans—and he makes it known to others. ",
