--- a/translation/en/sujato/sutta/mn/mn82_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn82_translation-en-sujato.json
@@ -10,7 +10,7 @@
   "mn82:2.5": "He has realized with his own insight this world—with its gods, Māras and Brahmās, this population with its ascetics and brahmins, gods and humans—and he makes it known to others. ",
   "mn82:2.6": "He teaches Dhamma that’s good in the beginning, good in the middle, and good in the end, meaningful and well-phrased. And he reveals a spiritual practice that’s entirely full and pure. ",
   "mn82:2.7": "It’s good to see such perfected ones.” ",
-  "mn82:3.1": "Then the brahmins and householders of Thullakoṭṭhita went up to the Buddha. Before sitting down to one side, some bowed, some exchanged greetings and polite conversation, some held up their joined palms toward the Buddha, some announced their name and clan, while some kept silent. ",
+  "mn82:3.1": "Then the brahmins and householders of Thullakoṭṭhika went up to the Buddha. Before sitting down to one side, some bowed, some exchanged greetings and polite conversation, some held up their joined palms toward the Buddha, some announced their name and clan, while some kept silent. ",
   "mn82:3.2": "When they were seated, the Buddha educated, encouraged, fired up, and inspired them with a Dhamma talk. ",
   "mn82:4.1": "Now at that time a gentleman named Raṭṭhapāla, the son of the leading clan in Thullakoṭṭhita, was sitting in the assembly. ",
   "mn82:4.2": "He thought, ",
