Translations by sujato to translation/en/sujato/sutta/mn/mn82_translation-en-sujato.json

--- a/translation/en/sujato/sutta/mn/mn82_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn82_translation-en-sujato.json
@@ -12,7 +12,7 @@
   "mn82:2.7": "It’s good to see such perfected ones.” ",
   "mn82:3.1": "Then the brahmins and householders of Thullakoṭṭhika went up to the Buddha. Before sitting down to one side, some bowed, some exchanged greetings and polite conversation, some held up their joined palms toward the Buddha, some announced their name and clan, while some kept silent. ",
   "mn82:3.2": "When they were seated, the Buddha educated, encouraged, fired up, and inspired them with a Dhamma talk. ",
-  "mn82:4.1": "Now at that time a gentleman named Raṭṭhapāla, the son of the leading clan in Thullakoṭṭhita, was sitting in the assembly. ",
+  "mn82:4.1": "Now at that time a gentleman named Raṭṭhapāla, the son of the leading clan in Thullakoṭṭhika, was sitting in the assembly. ",
   "mn82:4.2": "He thought, ",
   "mn82:4.3": "“As I understand the Buddha’s teaching, it’s not easy for someone living at home to lead the spiritual life utterly full and pure, like a polished shell. ",
   "mn82:4.4": "Why don’t I shave off my hair and beard, dress in ocher robes, and go forth from lay life to homelessness?” ",
