--- a/translation/en/sujato/sutta/mn/mn82_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn82_translation-en-sujato.json
@@ -16,7 +16,7 @@
   "mn82:4.2": "He thought, ",
   "mn82:4.3": "“As I understand the Buddha’s teaching, it’s not easy for someone living at home to lead the spiritual life utterly full and pure, like a polished shell. ",
   "mn82:4.4": "Why don’t I shave off my hair and beard, dress in ocher robes, and go forth from lay life to homelessness?” ",
-  "mn82:5.1": "Then, having approved and agreed with what the Buddha said, the brahmins and householders of Thullakoṭṭhita got up from their seat, bowed, and respectfully circled the Buddha, keeping him on their right, before leaving. ",
+  "mn82:5.1": "Then, having approved and agreed with what the Buddha said, the brahmins and householders of Thullakoṭṭhika got up from their seat, bowed, and respectfully circled the Buddha, keeping him on their right, before leaving. ",
   "mn82:6.1": "Soon after they left, Raṭṭhapāla went up to the Buddha, bowed, sat down to one side, and said to him, ",
   "mn82:6.2": "“Sir, as I understand the Buddha’s teaching, it’s not easy for someone living at home to lead the spiritual life utterly full and pure, like a polished shell. ",
   "mn82:6.3": "I wish to shave off my hair and beard, dress in ocher robes, and go forth from the lay life to homelessness. ",
