Translations by sujato to translation/en/sujato/sutta/mn/mn82_translation-en-sujato.json

--- a/translation/en/sujato/sutta/mn/mn82_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn82_translation-en-sujato.json
@@ -119,7 +119,7 @@
   "mn82:15.4": "When he knew that ",
   "mn82:15.5": "it was impossible for Raṭṭhapāla to resign the training and return to a lesser life, he said, ",
   "mn82:15.6": "“Please, Raṭṭhapāla, go at your convenience.” ",
-  "mn82:16.1": "And then Raṭṭhapāla got up from his seat, bowed, and respectfully circled the Buddha, keeping him on his right. Then he set his lodgings in order and, taking his bowl and robe, set out for Thullakoṭṭhita. ",
+  "mn82:16.1": "And then Raṭṭhapāla got up from his seat, bowed, and respectfully circled the Buddha, keeping him on his right. Then he set his lodgings in order and, taking his bowl and robe, set out for Thullakoṭṭhika. ",
   "mn82:16.2": "Traveling stage by stage, he arrived at Thullakoṭṭhika, ",
   "mn82:16.3": "where he stayed in King Koravya’s deer range. ",
   "mn82:16.4": "Then Raṭṭhapāla robed up in the morning and, taking his bowl and robe, entered Thullakoṭṭhita for alms. ",
