--- a/translation/en/sujato/sutta/mn/mn82_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn82_translation-en-sujato.json
@@ -122,7 +122,7 @@
   "mn82:16.1": "And then Raṭṭhapāla got up from his seat, bowed, and respectfully circled the Buddha, keeping him on his right. Then he set his lodgings in order and, taking his bowl and robe, set out for Thullakoṭṭhika. ",
   "mn82:16.2": "Traveling stage by stage, he arrived at Thullakoṭṭhika, ",
   "mn82:16.3": "where he stayed in King Koravya’s deer range. ",
-  "mn82:16.4": "Then Raṭṭhapāla robed up in the morning and, taking his bowl and robe, entered Thullakoṭṭhita for alms. ",
+  "mn82:16.4": "Then Raṭṭhapāla robed up in the morning and, taking his bowl and robe, entered Thullakoṭṭhika for alms. ",
   "mn82:16.5": "Wandering indiscriminately for almsfood, he approached his own father’s house. ",
   "mn82:17.1": "Now at that time Raṭṭhapāla’s father was having his hair dressed in the hall of the middle gate. ",
   "mn82:17.2": "He saw Raṭṭhapāla coming off in the distance ",
