Translations by sujato to translation/en/sujato/sutta/mn/mn82_translation-en-sujato.json

--- a/translation/en/sujato/sutta/mn/mn82_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn82_translation-en-sujato.json
@@ -249,7 +249,7 @@
   "mn82:32.8": "Why don’t I go forth from the lay life to homelessness?’ ",
   "mn82:32.9": "So because of that decay of wealth they go forth. ",
   "mn82:32.10": "This is called decay of wealth. ",
-  "mn82:32.11": "But Master Raṭṭhapāla is the son of the leading clan here in Thullakoṭṭhita. ",
+  "mn82:32.11": "But Master Raṭṭhapāla is the son of the leading clan here in Thullakoṭṭhika. ",
   "mn82:32.12": "You have no decay of wealth. ",
   "mn82:32.13": "So what did you know or see or hear that made you go forth? ",
   "mn82:33.1": "And what is decay of relatives? ",
