Translations by sujato to translation/en/sujato/sutta/mn/mn82_translation-en-sujato.json

--- a/translation/en/sujato/sutta/mn/mn82_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn82_translation-en-sujato.json
@@ -262,7 +262,7 @@
   "mn82:33.8": "Why don’t I shave off my hair and beard, dress in ocher robes, and go forth from the lay life to homelessness?’ ",
   "mn82:33.9": "So because of that decay of relatives they go forth. ",
   "mn82:33.10": "This is called decay of relatives. ",
-  "mn82:33.11": "But Master Raṭṭhapāla has many friends and colleagues, relatives and kin right here in Thullakoṭṭhita. ",
+  "mn82:33.11": "But Master Raṭṭhapāla has many friends and colleagues, relatives and kin right here in Thullakoṭṭhika. ",
   "mn82:33.12": "You have no decay of relatives. ",
   "mn82:33.13": "So what did you know or see or hear that made you go forth? ",
   "mn82:34.1": "There are these four kinds of decay. Because of these, some people shave off their hair and beard, dress in ocher robes, and go forth from the lay life to homelessness. ",
