Translations by ayyasoma to translation/it/soma/sutta/mn/mn28_translation-it-soma.json

--- a/translation/it/soma/sutta/mn/mn28_translation-it-soma.json
+++ b/translation/it/soma/sutta/mn/mn28_translation-it-soma.json
@@ -13,5 +13,5 @@
   "mn28:7.2": "In questa occasione, l'elemento terra esterno scompare. ",
   "mn28:7.4": "Che dire di questo corpo di breve vita, tenuto in vita/alimentata/appropriata (tenuto acceso) dall'arsura/sete infinita: di certo in questo caso non si puo' dire questo sono io, questo mi appartiene. ",
   "mn28:8.1": "Se altre persone insultano, denigrano, infastidiscono, irritano quel cercatore, quello sa: ",
-  "mn28:8.2": "Queste sensazioni spiacevoli sono apparse dentro di me per via del contatto con le orecchie. "
+  "mn28:8.2": "‘Sono apparse dentro di me delle sensazioni spiacevoli nate dall'aver udito.’ "
 }
