Translations by ayyasoma to translation/it/soma/sutta/mn/mn28_translation-it-soma.json

--- a/translation/it/soma/sutta/mn/mn28_translation-it-soma.json
+++ b/translation/it/soma/sutta/mn/mn28_translation-it-soma.json
@@ -15,5 +15,6 @@
   "mn28:8.1": "Se altre persone insultano, denigrano, infastidiscono, irritano quel cercatore, quello sa: ",
   "mn28:8.2": "‘Sono apparse dentro di me delle sensazioni spiacevoli una volta che hanno toccato l'orecchio. ",
   "mn28:8.3": "Queste cose sono dipendenti, non sono indipendenti. ",
-  "mn28:8.4": "Dipendono da cosa? "
+  "mn28:8.4": "Dipendono da cosa? ",
+  "mn28:8.5": "Dipendenti dal contatto. "
 }
