Translations by ayyasoma to translation/it/soma/sutta/mn/mn28_translation-it-soma.json

--- a/translation/it/soma/sutta/mn/mn28_translation-it-soma.json
+++ b/translation/it/soma/sutta/mn/mn28_translation-it-soma.json
@@ -14,7 +14,7 @@
   "mn28:7.4": "Che dire di questo corpo di breve vita, tenuto in vita/alimentata/appropriata (tenuto acceso) dall'arsura/sete infinita: di certo in questo caso non si puo' dire questo sono io, questo mi appartiene. ",
   "mn28:8.1": "Se altre persone insultano, denigrano, infastidiscono, irritano quel cercatore, quello sa: ",
   "mn28:8.2": "‘Sono apparse dentro di me delle sensazioni spiacevoli dopo esserci stato un contatto con l'orecchio. ",
-  "mn28:8.3": "Queste cose sono dipendenti, non sono indipendenti. ",
+  "mn28:8.3": "Questo è dipendente, non è dipendente. ",
   "mn28:8.4": "Dipendono da cosa? ",
   "mn28:8.5": "Dipendenti dal contatto. "
 }
