Translations by ayyasoma to translation/it/soma/sutta/mn/mn28_translation-it-soma.json

--- a/translation/it/soma/sutta/mn/mn28_translation-it-soma.json
+++ b/translation/it/soma/sutta/mn/mn28_translation-it-soma.json
@@ -15,6 +15,6 @@
   "mn28:8.1": "Se altre persone insultano, denigrano, infastidiscono, irritano quel cercatore, quello sa: ",
   "mn28:8.2": "‘Sono apparse dentro di me delle sensazioni spiacevoli dopo esserci stato un contatto con l'orecchio. ",
   "mn28:8.3": "Questo è dipendente, non è dipendente. ",
-  "mn28:8.4": "Dipendono da cosa? ",
+  "mn28:8.4": "Dipendente da cosa? ",
   "mn28:8.5": "Dipendenti dal contatto. "
 }
