--- a/translation/it/soma/sutta/mn/mn28_translation-it-soma.json
+++ b/translation/it/soma/sutta/mn/mn28_translation-it-soma.json
@@ -16,5 +16,6 @@
   "mn28:8.2": "‘Sono apparse dentro di me delle sensazioni spiacevoli dopo esserci stato un contatto con l'orecchio. ",
   "mn28:8.3": "Questo è dipendente, non è dipendente. ",
   "mn28:8.4": "Dipendente da cosa? ",
-  "mn28:8.5": "Dipendente dal contatto. "
+  "mn28:8.5": "Dipendente dal contatto. ",
+  "mn28:8.6": "Vede il contatto come impermanente, le sensazioni come impermanenti, le xxxxx ???? "
 }
