Translations by sujato to translation/en/sujato/sutta/mn/mn82_translation-en-sujato.json

--- a/translation/en/sujato/sutta/mn/mn82_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn82_translation-en-sujato.json
@@ -33,7 +33,7 @@
   "mn82:7.5": "When he said this, Raṭṭhapāla’s parents said to him, ",
   "mn82:7.6": "“But, dear Raṭṭhapāla, you’re our only child. You’re dear to us and we love you. You’re dainty and raised in comfort. ",
   "mn82:7.7": "You know nothing of suffering. ",
-  "mn82:7.8": "When you die we will lose you against our wishes. ",
+  "mn82:7.8": "Even when you die we will lose you against our wishes. ",
   "mn82:7.9": "So how can we allow you to go forth while you’re still alive?” ",
   "mn82:7.10": "For a second time, ",
   "mn82:7.11": "and a third time, Raṭṭhapāla asked his parents for permission, but got the same reply. ",
