Translations by sujato to translation/en/sujato/sutta/mn/mn82_translation-en-sujato.json

--- a/translation/en/sujato/sutta/mn/mn82_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn82_translation-en-sujato.json
@@ -46,7 +46,7 @@
   "mn82:7.18": "",
   "mn82:7.19": "",
   "mn82:7.20": "Then Raṭṭhapāla thought, ",
-  "mn82:7.21": "“My parents don’t allow me to go forth.” He laid down there on the bare ground, saying, ",
+  "mn82:7.21": "“My parents don’t allow me to go forth.” He laid down right there on the bare ground, saying, ",
   "mn82:7.22": "“I’ll either die right here or go forth.” ",
   "mn82:7.23": "And he refused to eat, up to the seventh meal. ",
   "mn82:8.1": "Then Raṭṭhapāla’s parents said to him, ",
