Translations by sujato to translation/en/sujato/sutta/mn/mn82_translation-en-sujato.json

--- a/translation/en/sujato/sutta/mn/mn82_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn82_translation-en-sujato.json
@@ -80,7 +80,7 @@
   "mn82:10.6": "Get up, Raṭṭhapāla! Eat, drink, and amuse yourself. ",
   "mn82:10.7": "While enjoying sensual pleasures, delight in making merit. ",
   "mn82:10.8": "Your parents will not allow you to go forth. ",
-  "mn82:10.9": "When you die your parents will lose you against their wishes. ",
+  "mn82:10.9": "Even when you die your parents will lose you against their wishes. ",
   "mn82:10.10": "So how can they allow you to go forth while you’re still alive?” ",
   "mn82:10.11": "When they said this, Raṭṭhapāla kept silent. ",
   "mn82:10.12": "For a second time, ",
