Translations by sujato to translation/en/sujato/sutta/mn/mn82_translation-en-sujato.json

--- a/translation/en/sujato/sutta/mn/mn82_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn82_translation-en-sujato.json
@@ -114,7 +114,7 @@
   "mn82:14.2": "He understood: “Rebirth is ended; the spiritual journey has been completed; what had to be done has been done; there is no return to any state of existence.” ",
   "mn82:14.3": "And Venerable Raṭṭhapāla became one of the perfected. ",
   "mn82:15.1": "Then he went up to the Buddha, bowed, sat down to one side, and said to him, ",
-  "mn82:15.2": "“Sir, I wouldd like to visit my parents, if the Buddha allows it.” ",
+  "mn82:15.2": "“Sir, I would like to visit my parents, if the Buddha allows it.” ",
   "mn82:15.3": "Then the Buddha focused on comprehending Raṭṭhapāla’s mind. ",
   "mn82:15.4": "When he knew that ",
   "mn82:15.5": "it was impossible for Raṭṭhapāla to resign the training and return to a lesser life, he said, ",
