Translations by sujato to translation/en/sujato/sutta/mn/mn82_translation-en-sujato.json

--- a/translation/en/sujato/sutta/mn/mn82_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn82_translation-en-sujato.json
@@ -146,7 +146,7 @@
   "mn82:19.3": "“Dear Raṭṭhapāla! There is last night’s porridge and you are just eating it? ",
   "mn82:19.4": "Why not go to your own home?” ",
   "mn82:19.5": "“Householder, how could those of us who have gone forth from the lay life to homelessness have a house? ",
-  "mn82:19.6": "We’re homeless, householder. ",
+  "mn82:19.6": "We are homeless, householder. ",
   "mn82:19.7": "I came to your house, but there I received neither alms nor a polite refusal, ",
   "mn82:19.8": "but only abuse.” ",
   "mn82:19.9": "“Come, dear Raṭṭhapāla, let’s go to the house.” ",
