Translations by sujato to translation/en/sujato/sutta/mn/mn82_translation-en-sujato.json

--- a/translation/en/sujato/sutta/mn/mn82_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn82_translation-en-sujato.json
@@ -342,7 +342,7 @@
   "mn82:41.2": "",
   "mn82:41.3": "How should I see the meaning of this statement?” ",
   "mn82:41.4": "“What do you think, great king? ",
-  "mn82:41.5": "Do you dwell in the prosperous land of Kuru?” ",
+  "mn82:41.5": "Do you reign over the prosperous land of Kuru?” ",
   "mn82:41.6": "“Indeed I do.” ",
   "mn82:41.7": "“What do you think, great king? ",
   "mn82:41.8": "Suppose a trustworthy and reliable man were to come from the east. ",
