Translations by sujato to translation/en/sujato/sutta/mn/mn82_translation-en-sujato.json

--- a/translation/en/sujato/sutta/mn/mn82_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn82_translation-en-sujato.json
@@ -355,7 +355,7 @@
   "mn82:41.15": "and plenty of women for the taking. ",
   "mn82:41.16": "With your current forces you can conquer it. ",
   "mn82:41.17": "Conquer it, great king!’ What would you do?” ",
-  "mn82:41.18": "“I would conquer it and dwell there.” ",
+  "mn82:41.18": "“I would conquer it and reign over it.” ",
   "mn82:41.19": "“What do you think, great king? ",
   "mn82:41.20": "Suppose a trustworthy and reliable man were to come from the west, ",
   "mn82:41.21": "north, ",
